# websocket-video-transfer-poc

./: Cargo.toml
src/client/: main.rs
src/server/: chat_server.rs  main.rs  session.rs
src/shared/: codec.rs
