[package]
name = "websocket-video-transfer"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/shared/mod.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-codec = "0.5.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
byteorder = "1.5.0"
env_logger = "0.10.1"
futures-util = { version = "0.3.29", features = ["sink"] }
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
